--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,37 @@ img, video, audio, iframe, table, form {
 .row {
   margin-bottom: 20px;
 }
+
+/*////// CAROUSEL STYLES //////*/
+
+#carousel-example-generic .item img {
+  height: auto;
+}
+
+.carousel-caption p {
+  display: none;
+}
+
+
+/* The information for screen display adjustments 
+is found at bootstrap site under grid system */
+@media only screen and (min-width: 768px) {
+  #carousel-example-generic .item img {
+  height: 384px;/* This size was found by dividing by 2 */
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  #carousel-example-generic .item img {
+  height: 496px;/* This size was found by dividing by 2 */
+  }
+  .carousel-caption p {
+  display: block;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #carousel-example-generic .item img {
+  height: 600px;/* This size was found by dividing by 2 */
+  }
+}
